# Marketfly

./: .gitignore  README.md  app.js  index.html  marketflow_app.py  package-lock.json  package.json  run_marketflow.sh  styles.css
src/: App.tsx  catalogSeed.ts  lib.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
