[package]
name = "marketflow-pi"
version = "0.1.0"
description = "Sistema de caja con lector de barras para Raspberry Pi"
authors = ["OpenAI Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
tauri = { version = "2", features = [] }
